# raytracer

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/shaders/: grRayTracer.comp  grRayTracerTriangles.comp
include/glad/: glad.h
shaders/: computeShaderCode.comp  grRayTracer.comp  grRayTracerDouble.comp  rayTracingShader.comp  shader.frag  shader.vert
src/: globalVars.hpp  main.cpp
src/rendering/: computeShader.cpp  computeShader.hpp  imageTexture.cpp  imageTexture.hpp  myCamera.cpp  myCamera.hpp
src/screen_source/: myTexture.cpp  myTexture.hpp  screenFuncs.cpp  screenFuncs.hpp  screenQuad.cpp  screenQuad.hpp  shader.cpp  shader.hpp
